# Expense-Tracking-Agent

./: README.md  agent_orchestrator.py  ai_agent_orchestrator.py  app.py  check.py  data_manager.py  expenses.json  ocr_processor.py  pyproject.toml  readme.md  requirements.txt  styles.py  visualizations.py
agents/: budget_advisor_agent.py  categorization_agent.py  receipt_scanner_agent.py
utils/: data_manager.py  ocr_processor.py
